@@ -16,6 +16,11 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+    // ASM
+    implementation 'org.ow2.asm:asm:8.0.1'
+    implementation 'org.ow2.asm:asm-commons:8.0.1'
+    implementation group: 'com.baidu', name: 'jprotobuf', version: '2.4.6'
+
     testImplementation 'com.alibaba:fastjson:1.2.75'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
@@ -29,6 +34,7 @@ test {
 
 compileJava {
     options.compilerArgs += ['--module-path', classpath.asPath]
+    options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.vm.annotation=deepjson']
 }
 
 javadoc {
